--- a/Nuevo/src/Presentacion/ifrmVerInfoReserva.form
+++ b/Nuevo/src/Presentacion/ifrmVerInfoReserva.form
@@ -145,17 +145,20 @@
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace min="-2" pref="43" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="jnickCliente" min="-2" pref="61" max="-2" attributes="0"/>
-                          <Component id="jLabel4" min="-2" max="-2" attributes="0"/>
-                          <Component id="jEstado" min="-2" pref="104" max="-2" attributes="0"/>
-                          <Component id="jlabel2" min="-2" max="-2" attributes="0"/>
+                          <Component id="jnickCliente" alignment="0" min="-2" pref="61" max="-2" attributes="0"/>
+                          <Component id="jLabel4" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Component id="jEstado" alignment="0" min="-2" pref="104" max="-2" attributes="0"/>
                           <Component id="jPrecio" alignment="0" min="-2" pref="64" max="-2" attributes="0"/>
                           <Component id="jLabel2" alignment="0" min="-2" pref="56" max="-2" attributes="0"/>
                           <Component id="jLabel3" alignment="0" min="-2" max="-2" attributes="0"/>
                           <Component id="jFecha" alignment="0" min="-2" pref="113" max="-2" attributes="0"/>
+                          <Component id="jlabel2" alignment="0" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace pref="49" max="32767" attributes="0"/>
-                      <Component id="jScrollPane3" min="-2" pref="549" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="0" attributes="0">
+                          <Component id="jScrollPane3" min="-2" pref="549" max="-2" attributes="0"/>
+                          <Component id="jlabel3" min="-2" max="-2" attributes="0"/>
+                      </Group>
                       <EmptySpace min="-2" pref="35" max="-2" attributes="0"/>
                   </Group>
               </Group>
@@ -164,11 +167,13 @@
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace min="-2" pref="69" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="3" attributes="0">
+                          <Component id="jlabel2" alignment="3" min="-2" pref="14" max="-2" attributes="0"/>
+                          <Component id="jlabel3" alignment="3" min="-2" pref="14" max="-2" attributes="0"/>
+                      </Group>
+                      <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                          <Component id="jScrollPane3" pref="0" max="32767" attributes="0"/>
                           <Group type="102" attributes="0">
-                              <Component id="jlabel2" min="-2" pref="14" max="-2" attributes="0"/>
-                              <EmptySpace max="-2" attributes="0"/>
                               <Component id="jnickCliente" min="-2" pref="14" max="-2" attributes="0"/>
                               <EmptySpace type="separate" max="-2" attributes="0"/>
                               <Component id="jLabel2" min="-2" max="-2" attributes="0"/>
@@ -183,6 +188,7 @@
                               <EmptySpace max="-2" attributes="0"/>
                               <Component id="jEstado" min="-2" pref="15" max="-2" attributes="0"/>
                           </Group>
+                          <Component id="jScrollPane3" pref="0" max="32767" attributes="0"/>
                       </Group>
                       <EmptySpace max="32767" attributes="0"/>
                   </Group>
@@ -263,6 +269,9 @@
               <SubComponents>
                 <Component class="javax.swing.JTable" name="jTable">
                   <Properties>
+                    <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+                      <Font name="Tahoma" size="12" style="0"/>
+                    </Property>
                     <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
                       <Table columnCount="6" rowCount="12">
                         <Column editable="false" title="Nombre" type="java.lang.Object"/>
@@ -280,6 +289,14 @@
                 </Component>
               </SubComponents>
             </Container>
+            <Component class="javax.swing.JLabel" name="jlabel3">
+              <Properties>
+                <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+                  <Font name="Tahoma" size="12" style="1"/>
+                </Property>
+                <Property name="text" type="java.lang.String" value="Productos:"/>
+              </Properties>
+            </Component>
           </SubComponents>
         </Container>
       </SubComponents>
