--- a/Nuevo/src/Presentacion/frmMenuPrincipal.form
+++ b/Nuevo/src/Presentacion/frmMenuPrincipal.form
@@ -7,6 +7,11 @@
         <Property name="text" type="java.lang.String" value="jMenuItem2"/>
       </Properties>
     </Component>
+    <Component class="javax.swing.JMenuItem" name="jMenuItem3">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="jMenuItem3"/>
+      </Properties>
+    </Component>
     <Menu class="javax.swing.JMenuBar" name="mbBarra">
       <SubComponents>
         <Menu class="javax.swing.JMenu" name="mInicio">
@@ -146,6 +151,23 @@
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="miConsReservasActionPerformed"/>
               </Events>
+            </MenuItem>
+          </SubComponents>
+        </Menu>
+        <Menu class="javax.swing.JMenu" name="mDatos">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="Datos del sistema"/>
+          </Properties>
+          <SubComponents>
+            <MenuItem class="javax.swing.JMenuItem" name="miDatosDePrueba">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Utilizar datos de prueba"/>
+              </Properties>
+            </MenuItem>
+            <MenuItem class="javax.swing.JMenuItem" name="mEliminarDatos">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Eliminar datos"/>
+              </Properties>
             </MenuItem>
           </SubComponents>
         </Menu>
