--- a/Nuevo/src/Presentacion/ifrmVerInfoClientes.form
+++ b/Nuevo/src/Presentacion/ifrmVerInfoClientes.form
@@ -404,7 +404,7 @@
                                       <EmptySpace max="-2" attributes="0"/>
                                       <Component id="jEstado" min="-2" pref="104" max="-2" attributes="0"/>
                                   </Group>
-                                  <Component id="jScrollPane2" alignment="0" min="-2" pref="549" max="-2" attributes="0"/>
+                                  <Component id="jScrollPane2" alignment="0" min="-2" pref="551" max="-2" attributes="0"/>
                               </Group>
                               <EmptySpace max="32767" attributes="0"/>
                           </Group>
@@ -505,10 +505,12 @@
                               <Font name="Tahoma" size="12" style="0"/>
                             </Property>
                             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-                              <Table columnCount="6" rowCount="4">
+                              <Table columnCount="8" rowCount="4">
                                 <Column editable="false" title="Nombre" type="java.lang.Object"/>
                                 <Column editable="false" title="Proveedor" type="java.lang.Object"/>
                                 <Column editable="false" title="Cantidad" type="java.lang.Object"/>
+                                <Column editable="false" title="Precio unitario" type="java.lang.Object"/>
+                                <Column editable="false" title="Total l&#xed;nea" type="java.lang.Object"/>
                                 <Column editable="false" title="Fecha Inicio" type="java.lang.Object"/>
                                 <Column editable="false" title="Fecha Fin" type="java.lang.Object"/>
                                 <Column editable="false" title="Tipo" type="java.lang.Object"/>
