--- a/Nuevo/src/Presentacion/ifrmActualizarEstadoReserva.form
+++ b/Nuevo/src/Presentacion/ifrmActualizarEstadoReserva.form
@@ -152,6 +152,9 @@
         </Component>
         <Component class="javax.swing.JButton" name="btnModificar">
           <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Tahoma" size="12" style="0"/>
+            </Property>
             <Property name="text" type="java.lang.String" value="Modificar"/>
           </Properties>
           <Events>
